@@ -1,3 +1,8 @@
+2007-09-05  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* src/baobab-scan.c:
+	BUGZILLA #473833 - Infinite recursion in /sys
+
 2007-08-01  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-utils.c:
@@ -6,7 +11,8 @@
 2007-07-17  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab.c: (main):
-	BUGZILLA #453742 - should display a dialog when there is no disk mounted
+	BUGZILLA #453742 - should display a dialog when there is no disk
+	mounted
 
 2007-07-16 Alejandro G. Castro <acastro@igalia.com>
 
